# AP_EX4

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  ICacheManager.h  IClientHandler.h  ISearchable.h  ISearcher.h  IServer.h  ISolver.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  PriorityQueue.h  README.md  SearchSolver.h  State.h  StringReverser.h  TcpServer.cpp  TcpServer.h  details.txt  forUs.txt  lint_to_git.txt  log.txt  main.cpp  matrix.txt  (+1 more)
